--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,13 @@ services:
       - "./src/:/var/www/html/"
     ports:
       - "8080:80"
-  mysql-server:
-    image: mysql:8.0.19
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: secret
-    volumes:
-      - mysql-data:/var/lib/mysql
+  # mysql-server:
+  #   image: mysql:8.0.19
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: secret
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
   mongo:
 
     container_name: mongo1
@@ -33,14 +33,14 @@ services:
     ports:
 
       - "27017:27017"
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:5.0.1
-    restart: always
-    environment:
-      PMA_HOST: mysql-server
-      PMA_USER: root
-      PMA_PASSWORD: secret
-    ports:
-      - "5000:80"
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin:5.0.1
+  #   restart: always
+  #   environment:
+  #     PMA_HOST: mysql-server
+  #     PMA_USER: root
+  #     PMA_PASSWORD: secret
+  #   ports:
+  #     - "5000:80"
 volumes:
   mysql-data:
